== 2.7.16 ==
Release date: 
* Enhancement: Dual Heading - Added Text Stroke option
* Enhancement: Fancy Heading - Added Text Stroke option
* Enhancement: Info Box - Added Text Stroke option for Title and Subtitle

== 2.7.15 ==
Release date: February 2, 2024
* Fixed: Compatibility issues with WPML and PHP 8
* Security Fix: Improved code security in PowerPack widgets

== 2.7.14 ==
Release date: December 29, 2023
* Fixed: Advanced Posts - Carousel layout was not working in the Elementor editor
* Security Fix: Improved code security on PowerPack settings page

== 2.7.13 ==
Release date: December 12, 2023
* Enhancement: Pricing Table - Added more units for Tooltip Icon Spacing option
* Enhancement: Logo Grid - Added more units support for logo title spacing option
* Enhancement: Hotspots - Added hotspot size option for single hotspots
* Enhancement: Hotspots - Added CSS ID and CSS Classes options for hotspots
* Fixed: Pricing Table - Tooltip Icon Spacing option
* Fixed: Logo Grid - Logos styles were applying to logo container instead of logo images
* Fixed: PowerPack settings were not showing on WordPress multisite

== 2.7.12 ==
Release date: November 28, 2023
* Enhancement: Info List - Link type Box option now also links the Info List icon
* Enhancement: Buttons - Updated Buttons Spacing option to add row spacing when button stack
* Enhancement: Logo Carousel - Added option to show or hide logo title
* Enhancement: Logo Grid - Added option to show or hide logo title
* Enhancement: Logo Grid - Repeater items now show logo title instead of Logo Image text
* Fixed: Instagram Feed - Carousel was not working when Upgrade Swiper Library experiment is set to active
* Fixed: Gravity Forms - Submit Button alignment option was not working

== 2.7.11 ==
Release date: October 17, 2023
* Fixed: Advanced Posts - Excerpt length option was not working in the Elementor editor
* Fixed: Animated Gradient Background - Animation was not working with flex containers

== 2.7.10 ==