@@ -3,6 +3,8 @@ Release date:
 * Enhancement: Dual Heading - Added Text Stroke option
 * Enhancement: Fancy Heading - Added Text Stroke option
 * Enhancement: Info Box - Added Text Stroke option for Title and Subtitle
+* Enhancement: Info Grid & Carousel - Added Text Stroke option for Title and Subtitle
+* Enhancement: Info Grid & Carousel - Added Text Shadow option for Title and Subtitle
 
 == 2.7.15 ==
 Release date: February 2, 2024
